support for parralel execution of scenarios