@@ -10,28 +10,86 @@
 
 
     <build>
+
         <plugins>
+            <plugin>
+                <groupId>com.github.temyers</groupId>
+                <artifactId>cucumber-jvm-parallel-plugin</artifactId>
+                <version>5.0.0</version>
+                <executions>
+                    <execution>
+                        <id>generateRunners</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>generateRunners</goal>
+                        </goals>
+                        <configuration>
+                            <glue>
+                                <package>com.platform.steps</package>
+                            </glue>
+                            <outputDirectory>${project.build.directory}/generated-test-sources/cucumber</outputDirectory>
+                            <featuresDirectory>src/test/java/com/platform/features</featuresDirectory>
+                            <cucumberOutputDir>target/cucumber-parallel</cucumberOutputDir>
+                            <strict>true</strict>
+                            <monochrome>true</monochrome>
+                            <namingScheme>simple</namingScheme>
+                            <parallelScheme>FEATURE</parallelScheme>
+                            <plugins>
+                                <plugin>
+                                    <name>json</name>
+                                </plugin>
+                            </plugins>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.19.1</version>
+                <executions>
+                    <execution>
+                        <id>acceptance-test</id>
+                        <phase>integration-test</phase>
+                        <goals>
+                            <goal>integration-test</goal>
+                        </goals>
+                        <configuration>
+                            <forkCount>10</forkCount>
+                            <reuseForks>false</reuseForks>
+                            <includes>
+                                <include>**/*IT.class</include>
+                            </includes>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
+                    <fork>true</fork>
                     <source>8</source>
                     <target>8</target>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19.1</version>
-                <configuration>
-                    <testFailureIgnore>true</testFailureIgnore>
-                    <parallel>both</parallel>
-                    <threadCount>4</threadCount>
-                    <includes>
-                        <include>**/RunnerClass.java</include>
-                    </includes>
-                </configuration>
-            </plugin>
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-surefire-plugin</artifactId>-->
+                <!--<version>2.19.1</version>-->
+                <!--<configuration>-->
+                    <!--<testFailureIgnore>true</testFailureIgnore>-->
+                    <!--<parallel>classes</parallel>-->
+                    <!--<threadCount>4</threadCount>-->
+                    <!--<forkMode>perthread</forkMode>-->
+                    <!--<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
+                    <!--<includes>-->
+                        <!--<include>**/*RunnerClass.java</include>-->
+                    <!--</includes>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
             <plugin>
                 <groupId>net.masterthought</groupId>
                 <artifactId>maven-cucumber-reporting</artifactId>
@@ -39,14 +97,15 @@
                 <executions>
                     <execution>
                         <id>execution</id>
-                        <phase>test</phase>
+                        <phase>post-integration-test</phase>
                         <goals>
                             <goal>generate</goal>
                         </goals>
                         <configuration>
                             <projectName>qa-platform-automation</projectName>
-                            <outputDirectory>target/cucumber/cucumber-reports</outputDirectory>
-                            <cucumberOutput>target/cucumber/cucumber.json</cucumberOutput>
+                            <outputDirectory>target/cucumber-parallel/cucumber-reports</outputDirectory>
+                            <cucumberOutput>target/cucumber-parallel/</cucumberOutput>
+                            <parallelTesting>true</parallelTesting>
                             <buildNumber>822</buildNumber>
                         </configuration>
                     </execution>
@@ -137,7 +196,6 @@
             <artifactId>core</artifactId>
             <version>4.0.0</version>
         </dependency>
-
 
     </dependencies>
 </project>
